# CMakeLearning

101/: 101first_cmake.cpp  CMakeLists.txt  readme.md
102/: CMakeLists.txt  main.cpp  readme.md
102/xlog/: CMakeLists.txt  xlog.cpp  xlog.h
103message/: CMakeLists.txt
104variable/: CMakeLists.txt
105color/: CMakeLists.txt
106sys_var/: CMakeLists.txt
108auto_src_h/: CMakeLists.txt  main.cpp
108auto_src_h/include/: xlog.h
108auto_src_h/src/: xlog.cpp  xtest.c  xthread.cc
109cmake_out/: CMakeLists.txt
109cmake_out/test_xlog/: CMakeLists.txt
109cmake_out/xlog/: CMakeLists.txt  xlog.cpp
110add_subdirectory/: CMakeLists.txt
110add_subdirectory/test_xlog/: test_xlog.cpp
110add_subdirectory/xlog/: CMakeLists.txt  xlog.h
201cmake_if/: CMakeLists.txt  test.cpp
202cmake_cache/: CMakeLists.txt
